# nova-dashboard

./: .dockerignore  .env.sample  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  go.sh  manage.py  pyproject.toml
.github/workflows/: build-test.yml  nova-dashboard.yml
dockerfiles/: Dockerfile  nginx.conf.template
launcher_app/: asgi.py  auth.py  galaxy.py  models.py  settings.py  urls.py  views.py  wsgi.py
scripts/: entrypoint.sh  nginx.conf
src/launcher_app/: apps.py  asgi.py  auth.py  galaxy.py  models.py  notification.py  settings.py  status.py  urls.py  views.py  wsgi.py
src/launcher_app/migrations/: 0001_initial.py  0002_notification.py
src/vue/: .eslintrc.cjs  index.html  package.json  pnpm-lock.yaml  vite.config.js
src/vue/public/: tools.json
src/vue/src/: App.vue  main.js
src/vue/src/assets/js/: alerts.js
src/vue/src/components/: ActiveToolsPanel.vue  InfoPanel.vue  NotificationPanel.vue  StatusBanner.vue  StatusPanel.vue  ToolDrawer.vue  ToolListItem.vue  ToolStatus.vue
src/vue/src/router/: index.js
src/vue/src/stores/: job.js  user.js
src/vue/src/views/: CategoryView.vue  HomeView.vue  LaunchView.vue  NotFoundView.vue
tests/: test_dummy.py
vue/: index.html  package.json  pnpm-lock.yaml  vite.config.js
vue/src/router/: index.js
vue/src/stores/: user.js
vue/src/views/: HomeView.vue
